[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/animated_objects/animated_objects_template.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/animated_objects/bathroom_sink.png" type="Texture" id=2]
[ext_resource path="res://scripts/animated_objects/sink.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 15.5, 9 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 14 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Texture:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 14 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Texture:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 13 ]
}

[sub_resource type="Animation" id=3]
resource_name = "loop"
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 14 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Texture:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="Animation" id=4]
resource_name = "turn_off"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 14 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Texture:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12 ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 6.5, 4 )

[node name="Sink" groups=["Collectable"] instance=ExtResource( 1 )]
collision_layer = 8
collision_mask = 2
script = ExtResource( 3 )
quest_key = "Pia"
value = 1
target_value = 1

[node name="Texture" parent="." index="0"]
position = Vector2( 0, 7 )
texture = ExtResource( 2 )
hframes = 14

[node name="Collision" parent="." index="1"]
position = Vector2( 0.5, 7 )
shape = SubResource( 5 )

[node name="Animation" parent="." index="2"]
autoplay = "idle"
anims/RESET = SubResource( 1 )
anims/idle = SubResource( 2 )
anims/loop = SubResource( 3 )
anims/turn_off = SubResource( 4 )

[node name="InteractableArea" parent="." index="3"]
position = Vector2( 0, 7 )

[node name="Collision" parent="InteractableArea" index="0"]
visible = false
position = Vector2( -2.5, -6 )
shape = SubResource( 6 )

[node name="InteractCooldown" parent="." index="4"]
one_shot = true

[connection signal="animation_finished" from="Animation" to="." method="on_animation_finished"]
[connection signal="timeout" from="InteractCooldown" to="." method="on_interaction_timeout"]
